fix(`style`): make space for wrapped `<h1>` text

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -31,7 +31,7 @@ h1 {
     text-underline-position: under;
     text-decoration-color: rgb(79, 123, 84);
     text-decoration-thickness: 2px;
-
+    line-height: 1.2;
 }
 
 body > footer {
